syntax = "proto3";

package mastercard;

import "google/protobuf/timestamp.proto";

service MastercardCurrencyService {
    rpc GetCurrencyConversion (MastercardCurrencyConversionRequest) returns (MastercardCurrencyConversionReply) {}
}

message MastercardCurrencyConversionRequest {
    // Date of the requested FX rates.
    string fxDate =1;
    // Currency of the transaction.
    string transCurr = 2;
    // Cardholder billing currency.
    string crdhldBillCurr = 3;
    // Additional fees imposed by the bank.
    int64 bankFee = 4;
    // Amount in the transaction currency
    float transAmt = 5;

}

message MastercardCurrencyConversionReply {
    // The name of the service being requested.
    string name =1;
    // The type of response being returned by the API.
    string type = 2;
    // The description of the API being called.
    string description = 3;
    // Additional fees imposed by the bank.
    google.protobuf.Timestamp date = 4;
    // Amount in the transaction currency
    float transAmt = 5;
    // Data 
    CurrencyDataResponse data = 6;

}

message CurrencyDataResponse  {
    // Rate applied to the transaction to convert from Transaction Currency to Cardholder Billing Currency.
    float conversionRate = 1;
    // Amount in the cardholder billing currency.
    float crdhldBillAmt = 2;
    // Amount in the transaction currency.
    float transAmt = 3;
    // Date of the requested FX rates.
    string fxDate = 4;
    // Currency of the transaction
    string transCurr = 5;
    // Cardholder billing currency.
    string crdhldBillCurr = 6;
    // Bankfee
    float bankFee = 7;
    // Error code
    int64 errorCode = 8;
    // The reason for the error.
    string errorMessage = 9;
}
  